# Changelog

## Version 5.2.0

* Adding load directory of videos support (thanks to Chris / moonwhaler and a lot of others!)
* Fixing #398 audio and subtitles disabled when editing queue item (thanks to philblue1 and Don Gafford)

## Version 5.1.0

* Adding AV1 support for rigaya's AMD hardware encoder!
* Adding #192 a true portable mode for Windows (thanks to Demicro)
* Fixing lookup for QSVEncC
* Fixing lookup for hdr10plus_tool
* Fixing concat builder
* Fixing #390 Wrong scale and behavior for DPI 250% on Windows (thanks to smtad)

## Version 5.0.0

* Adding new GUI backend PySide6
* Adding AV1 support for rigaya's Nvidia and Intel hardware encoders!
* Adding default source directory (thanks to Battlestar1965)
* Adding hidden tabs for things that are not supported for a certain codec
* Adding #345 Change the default priority of spawned tools (thanks to Maximo Piva)
* Adding #371 Add "Stay on Top" (thanks to Hexenhammer)
* Adding rotation detection for side data list, used in phone videos a lot
* Adding #366 All x265 possible profiles (thanks to DesertCookie)
* Fixing #370 Audio Match not working correctly after 4.10.0 (thanks to Hexenhammer)
* Fixing settings panel would always want a restart if any paths to executables were filled on Windows
* Fixing #374 name of hdr10plus tool name and adding link in settings (thanks to Richard Harmonson)
* Fixing check for output same as source on file systems that don't support resolve
* Fixing #378 Deprecated features used for SVT-AV1 (thanks to DesertCookie)
* Fixing #380 Not all subtitles have "codec_name" (thanks to No Name)
* Removing support and builds for Windows 7 and 8
* Removing support and builds for MacOS 10

## Version 4.10.0

* Adding AVIF support using libsvtav1
* Adding #352 default output directory to settings panel (thanks to Maddie Davis)
* Adding #306 support for audio profiles with pattern matching for rigaya's hardware encoders