@@ -16,7 +16,7 @@ jobs:
 
     - uses: actions/setup-python@v3
       with:
-        python-version: "3.10"
+        python-version: "3.11"
 
     - uses: actions/cache@v2
       with:
@@ -45,9 +45,14 @@ jobs:
 
     - name: Install requirements
       run: |
-        python -m pip install --upgrade pip setuptools
-        python -m pip install --upgrade -r requirements.txt
-        python -m pip install --upgrade -r requirements-test.txt
+        python -m pip install --upgrade pip setuptools poetry
+
+    - name: Poetry Install
+      run: poetry install --with dev
+      continue-on-error: true
+
+    - name: Poetry Install 2
+      run: poetry install --with dev
 
     - name: Run tests
       env:
