@@ -314,7 +314,7 @@ def clean_file_string(source):
 
 
 def quoted_path(source):
-    return str(source).strip().replace("\\", "\\\\\\\\").replace(":", "\\\\:").replace(" ", "\\ ").replace(",", "\\,")
+    return str(source).strip().replace("\\", "\\\\").replace(":", "\\:").replace("'", "'\\\\\\''")
 
 
 def sanitize(source):
