@@ -353,7 +353,7 @@ class ProfileDetails(QtWidgets.QWidget):
         widget = QtWidgets.QWidget()
         layout = QtWidgets.QVBoxLayout()
         title = QtWidgets.QLabel(t("Encoder Settings"))
-        title.setFont(QtGui.QFont("helvetica", 9, weight=70))
+        title.setFont(QtGui.QFont(self.app.font().family(), 9, weight=70))
         layout.addWidget(title)
         for k, v in settings.dict().items():
             item_1 = QtWidgets.QLabel(" ".join(str(k).split("_")).title())
@@ -372,7 +372,7 @@ class ProfileDetails(QtWidgets.QWidget):
 
         main_section = QtWidgets.QVBoxLayout(self)
         profile_title = QtWidgets.QLabel(f"{t('Profile_window')}: {profile_name}")
-        profile_title.setFont(QtGui.QFont("helvetica", 10, weight=70))
+        profile_title.setFont(QtGui.QFont(self.app.font().family(), 10, weight=70))
         main_section.addWidget(profile_title)
         for k, v in profile.dict().items():
             if k == "advanced_options":
