@@ -17,7 +17,7 @@ exclude = '''
 
 [tool.poetry]
 name = "FastFlix"
-version = "5.2.0a5"
+version = "5.2.0a6"
 description = "GUI Encoder"
 license = "MIT"
 authors = ["Chris Griffith <chris@cdgriffith.com>", ]
@@ -42,6 +42,18 @@ pyside6 = ">=6.4.2,<7.0"
 python-box = {version = ">=6.0,<7.0", extras = ["all"]}
 requests = ">=2.28,<3.0"
 reusables = ">=0.9.6,<0.10.0"
+pypiwin32 = {version = ">=223", markers = "sys_platform == 'win32'"}
+
+[tool.poetry.group.dev]
+optional = true
+
+[tool.poetry.group.dev.dependencies]
+wheel = ">=0.38.4"
+typing_extensions = ">=4.4"
+pyinstaller = ">=5.7"
+pytest = ">=7.2"
+types-requests = ">=2.28"
+types-setuptools = ">=65.7"
 
 [tool.poetry.scripts]
 fastflix = "fastflix.__main__:start_fastflix"
