@@ -1,13 +1,0 @@
-appdirs~=1.4
-chardet~=5.1.0
-colorama~=0.4
-coloredlogs~=15.0
-iso639-lang==0.0.9
-mistune~=2.0
-pathvalidate~=2.4
-psutil~=5.9
-pydantic~=1.9
-PySide6~=6.3
-python-box[all]~=6.0
-requests~=2.28
-reusables~=0.9.6
